Actuliza api-docs y código autogenerado
